[package]
name = "tmpdir"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2021"
# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Useful to create temp directories and copy their contents on completion
of some action. Tmp dirs will be created using [`env::temp_dir`] with
some random characters prefixed to prevent a name clash
"""
# These URLs point to more information about the repository
documentation = "https://docs.rs/tmpdir"
repository = "https://github.com/bluecatengineering/tmpdir"
# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"
# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["temp", "tempdir", "tmpdir", "async"]
categories = ["filesystem", "data-structures", "asynchronous"]
# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from https://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.25.0", features = ["fs"] }
futures = { version = "0.3.12", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tokio-test = "0.4.2"